website/versioned_docs/version-1.0-beta/fdc3-charter.md
---
id: version-1.0-beta-fdc3-charter
sidebar_label: Charter
title: FDC3 Charter
hide_title: true
original_id: fdc3-charter
---

# FDC3 Charter

## Summary
The mission of the Financial Desktop Connectivity and Collaboration Consortium (FDC3) is to develop specific protocols and taxonomies to advance the ability of desktop applications in financial workflows to interoperate in a plug-and-play fashion, without prior bi-lateral agreements.

## Scope
Financial desktop applications include any app used in common financial workflows:

* Traditional native applications implemented in C++, .NET, Java, Python, etc.
* Hybrid web/native applications - stand alone native apps embedding Chromium (e.g. Electron, CEF, NW.js) 
* Desktop web applications - platform based apps extending Chromium (e.g. OpenFin, Hosted Web Apps)
* Common desktop applications not specific to finance, but critical to workflows - such as Excel, Outlook, etc. 
* Web applications running in a commercial browser

This standards group is focused specifically on the desktop.  Activities of the desktop interoperability group do not include:

* Defining financial objects - where existing standards are well established
* Interoperability between mobile apps
* Interoperability via REST or other client to server communication
Note: While these areas are out of scope, compatibility with Mobile and/or REST are still valid points of consideration for the FDC3.

## Success Criteria
* Commitment from major banks and application vendors to support the standards set out by the FDC3
* Workflow integrations in the wild leveraging the standards

## Deliverables
* Define criteria and mechanics for secure communication between apps
* Define key functions that require specific standards for interoperability 
* Create an agreed taxonomy for common app “intents” within financial desktop workflows
* Create an agreed taxonomy for common data to be shared across apps within financial desktop workflows
* Provide reference implementations of all standards
* Maintain the above standards and reference implementations 

### Participation
To be successful, the FDC3 is expected to have a critical mass of active participants for its duration. Effective participation in FDC3 means participation in the form of research, authoring, editing, and development activities outside the scope of attending regular meetings.

### Licensing
The FDC3 will use Apache 2.0 license or similar for all deliverables. 
